syntax = "proto3";

import "util.proto";

option java_multiple_files = true;
option java_package = "com.grpcProject";

message BookRequest{
  string book_id = 1;
}
message BookResponse {
  string book_id = 1;
  string name = 2;
  Type type = 3;
}

service BookService {
  rpc getBook(BookRequest) returns (BookResponse) {};
}